2011-08-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/mcs51/gptr_cmp.asm: new, added
	* device/lib/mcs51/Makefile.in: added gptr_cmp.rel
	* src/mcs51/gen.c(aopGet AOP_LIT): fixed generic pointer type
	  (toBoolean, genCmp, gencjneshort): fixed generic pointer comparison
	* src/SDCCast.c(checkPtrCast): no warning for banked function pointers,
	  (decorateType, EQ_OP NE_OP): optimize ifx(0==op) and null pointers
	* src/SDCCglue.c(aopLiteralGptr): added,
	  (printIvalCharPtr): fixed generic pointers
	* support/regression/tests/genptrs.c: new, added
	* support/regression/tests/bug3366711.c: fixed warning
	* support/regression/tests/inline.c: split #ifdef for readability

2011-08-09 Borut Razem <borut.razem AT gmail.com>

	* support/regression/Makefile.in: fixed dependency checking using vpath

2011-08-07 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCopt.c: fixed bug #3387421: Incorrect code in revision 6723,
	  optimize '>' and '>=' also in case when the following instruction
	  is not IFX
	* support/regression/test/compare_2_n.c:
	  added test cases for bug #3387421 and for 0x0000 and 0xffff

2011-08-06 Borut Razem <borut.razem AT gmail.com>

	* doc/Makefile.in: applied patch #3387171:
	  Binary build fails due to documentation cleanup,
	  thanks Strobl Anton
	* src/SDCCopt.c: further enhancements & fixes of patch #2702889:
	  added <= and >= optimizations, optimize > only if IFX
	* support/regression/test/compare_2_n.c: added test cases without IFX

2011-08-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug3368945.c:
	  Fixed bug #3386945.

2011-08-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed bitfield unpacking bug #3386784.

2011-08-05 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-z80.def:
	  Minor peephole improvements.
	* src/z80/gen.c:
	  Removed incorrect comment regarding arithmetic right shift.
